--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,10 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# .DS_Store files
+.DS_Store
+
+# Ignore imported samples
+/[Aa]ssets/[Ss]amples/*
+/[Aa]ssets/[Ss]amples.meta
